--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
-{
+  {
   "name": "adolbi-eia-integrated",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
